# Curves3D

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Curve.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h  Point3D.cpp  Point3D.h  Test.cpp  Test.h  Vector3D.cpp  main.cpp  test_runner.h
curves/: CMakeLists.txt
curves/include/: Curve.h  Helix.h  Point3D.h  Vector3D.h  circle.h  curve.h  ellipse.h  helix.h  point3D.h  vector3D.h
curves/src/: Ellipse.cpp  Helix.cpp  Point3D.cpp  Vector3D.cpp  circle.cpp  ellipse.cpp  helix.cpp  point3D.cpp  vector3D.cpp
curves/test/: test.h
test/: Test.cpp  test.cpp  test.h
test_runner/: test_runner.cpp
